Fixing header
Header was taking too much space on Firefox, fixed by setting a max width on the a element in the header. Seems it went outside of it's intended DOM element

--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -44,6 +44,7 @@ header > a{
     padding: 5px;
     display: flex;
     align-items: center;
+    max-width: 50px;
 }
 
 .header_logo{
